--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Cine\Cine.csproj" />
+  </ItemGroup>
+
 </Project>
