--- a/src/Presentacion/appsettings.json
+++ b/src/Presentacion/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Cine": "Server=localhost;Database=Cine;User=root;Password=telesca1234"
+    "Cine": "Server=localhost;Database=Cine;User=root;Password=root"
   }
 }
