--- a/src/Cine/Cine.csproj
+++ b/src/Cine/Cine.csproj
@@ -3,5 +3,6 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <NoWarn>CS8604</NoWarn>
   </PropertyGroup>
 </Project>
