--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -3,9 +3,9 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-
+    <Nullable>enable</Nullable>  
     <IsPackable>false</IsPackable>
+    <NoWarn>CS8604;CS8618</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
